--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,8 @@ android {
 //        enabled =true
 //    }
 
+    useLibrary 'org.apache.http.legacy'
+
     defaultConfig {
         applicationId "com.ym.quickRun"
         minSdkVersion rootProject.minSdkVersion
@@ -71,12 +73,12 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:support-v4:27.1.1'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "com.android.support:multidex:1.0.3"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:' + rootProject.supportLibraryVersion
     implementation 'com.android.support:appcompat-v7:' + rootProject.supportLibraryVersion
     implementation 'com.android.support:design:' + rootProject.supportLibraryVersion
@@ -112,6 +114,8 @@ dependencies {
     implementation 'com.tencent.bugly:crashreport_upgrade:1.3.5'
     implementation 'com.tencent.tinker:tinker-android-lib:1.9.6'
     implementation 'com.meituan.android.walle:library:1.1.6'
-
+    //Bomb
+    compile 'cn.bmob.android:bmob-sdk:3.6.3'
+    compile 'cn.bmob.android:http-legacy:1.0'
 
 }
