--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,8 +37,7 @@
             </intent-filter>
         </activity>
 
-
-
+        <service android:name=".widget.NetworkService"/>
     </application>
 
 </manifest>
