--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,8 +97,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
     //butterknife
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
@@ -114,4 +114,6 @@ dependencies {
     implementation 'com.tencent.bugly:crashreport_upgrade:1.3.5'
     implementation 'com.tencent.tinker:tinker-android-lib:1.9.6'
     implementation 'com.meituan.android.walle:library:1.1.6'
+    //LayoutManagerGroup
+    implementation 'com.github.DingMouRen:LayoutManagerGroup:1e6f4f96eb'
 }
