--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
 
         ndk {
             //设置支持的SO库架构
-            abiFilters 'armeabi', 'arm64-v8a', 'x86_64', 'x86', 'armeabi-v7a'
+            abiFilters 'armeabi'
         }
     }
 
