--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.ym.lightRunning">
+          package="com.ym.deambulation">
 
     <!--允许联网 -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -27,15 +27,8 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
 
-
-
-
-
-
-
-
     <application
-        android:name=".QuickRunApplication"
+        android:name=".DeambulationApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
